chore: comment out rule for tabs to prevent misalignment of first item
Refs: UNO-617 UNO-575

--- a/html/themes/custom/common_design_subtheme/components/uno-tabs/uno-tabs.css
+++ b/html/themes/custom/common_design_subtheme/components/uno-tabs/uno-tabs.css
@@ -27,9 +27,9 @@
   padding: 1.5rem;
 }
 
-.uno-tabs [role="tabpanel"] * + * {
+/* .uno-tabs [role="tabpanel"] * + * {
   margin-top: 0.75rem;
-}
+} */
 
 .uno-tabs *:focus {
   outline: none;
